@@ -27,8 +27,8 @@ public class FlintWorkbenchRecipeHandler implements IRecipeHandler {
             }
         }
 
+        list.add(new RecipeIngredient(flintWorkbenchRecipe.getTool(), 67, 22));
         list.add(new RecipeIngredient(Ingredient.fromStacks(flintWorkbenchRecipe.getRecipeOutput()), 98, 22));
-
         return list;
     }
 
